# MarsHydrogenEscape

./: .gitignore  CMakeLists.txt  README.md  testing.ipynb
data/: 0.5.csv  1.0.csv  1.5.csv  2.0.csv  master.csv
src/: MarsHydrogenEscape.cpp  MarsHydrogenEscape.h  main.cpp  wrapper.cpp
src/interpolation/: pwl_interp_2d_scattered.hpp  r8lib.hpp
src/libsoda/: CMakeLists.txt  LSODA.h
